[build-system]
requires = ["setuptools", "wheel", "numpy==1.16"]
build-backend = "setuptools.build_meta" 

[tool.cibuildwheel.linux]
before-all = [
    "yum update -y",
    "yum install -y yum-utils wget",
    "wget https://archives.fedoraproject.org/pub/archive/epel/7/x86_64/Packages/e/epel-release-7-14.noarch.rpm",
    "yum install -y ./epel-release-7-14.noarch.rpm",
    "yum install -y netcdf-devel graphviz-devel openmpi-devel"
]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
    "apk update",
    "apk add --no-cache netcdf-dev graphviz-dev openmpi-dev"
]